--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "esm": "^3.2.25",
+    "expo-server-sdk": "^3.6.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
