--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon node ./bin/www",
+    "dev": "nodemon node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.21.0",
